--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "categories": [
     "Programming Languages"
   ],
+  "repository": {
+    "url": "https://github.com/patrickdemers6/legv8-language-support"
+  },
   "contributes": {
     "languages": [{
       "id": "legv8",
